# base-fastapi

./: .gitignore  README.md  cookiecutter.json
.github/workflows/: main.yml
{{cookiecutter.project_slug}}/: .email.env.example  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  cli.py  entrypoint.sh  main.py  prestart.sh  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.gitlab/issue_templates/: bug.md  epic.md  feature.md  refactor.md
{{cookiecutter.project_slug}}/.gitlab/merge_request_templates/: bug.md  feature.md  refactor.md
{{cookiecutter.project_slug}}/clients/: __init__.py  db.py  docker.py  helpers.py  make.py
{{cookiecutter.project_slug}}/deployments/nginx/: {{cookiecutter.project_slug}}.nginx.conf
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/scripts/: buildclean  downgrade  lint  migrate  print_title  pyclean  test
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/config/: __init__.py  base.py  email.py  general.py  tracing.py
{{cookiecutter.project_slug}}/src/db/: base.py  base_class.py
{{cookiecutter.project_slug}}/src/modules/: __init__.py
{{cookiecutter.project_slug}}/src/utils/: __init__.py  deps.py  logger.py
{{cookiecutter.project_slug}}/src/utils/_base/: context.py  package_name.py
{{cookiecutter.project_slug}}/src/utils/emailer/: __init__.py  mailgun.py
{{cookiecutter.project_slug}}/src/utils/middlewares/: __init__.py  exceptions.py  monitoring.py  request_id.py  securities.py  whitelist.py
{{cookiecutter.project_slug}}/src/utils/utils/: __init__.py  logger.py  upload.py
{{cookiecutter.project_slug}}/src/utils/utils/_base/: context.py
{{cookiecutter.project_slug}}/src/utils/utils/emailer/: __init__.py  mailgun.py
{{cookiecutter.project_slug}}/src/utils/utils/middlewares/: __init__.py  exceptions.py  monitoring.py  request_id.py  securities.py  whitelist.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/zogapp/: __init__.py
{{cookiecutter.project_slug}}/zogapp/config/: __init__.py
{{cookiecutter.project_slug}}/zogapp/db/: base.py  base_class.py
{{cookiecutter.project_slug}}/zogapp/middlewares/: __init__.py  logger.py  monitoring.py  securities.py
{{cookiecutter.project_slug}}/zogapp/modules/: __init__.py
