[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "3.7.7"
requests = "2.24.0"
uvicorn = "0.12.1"
fastapi = "0.61.1"
ujson = "3.2.0"
orjson = "3.4.0"
email_validator = "1.1.1"
passlib = "1.7.2"
psycopg2-binary = "2.8.6"
alembic = "1.4.3"
sqlalchemy = "1.3.19"
python-dotenv = "0.14.0"
typer = "0.3.2"
pytz = "^2020.1"
pydantic_sqlalchemy = "^0.0.7"
zogutils = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "6.1.0"
pytest-cov = "2.10.1"
flake8 = "3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
